Implemented findVideoListByCategoria
