# src/main/java/br/com/juliocauan/aluraflix/infrastructere/service/CategoriaService.java
@@ -1,5 +1,7 @@
 package br.com.juliocauan.aluraflix.infrastructere.service;
 
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,6 +12,7 @@ import br.com.juliocauan.aluraflix.domain.service.BaseService;
 import br.com.juliocauan.aluraflix.infrastructere.mapper.CategoriaMapper;
 import br.com.juliocauan.aluraflix.infrastructere.model.CategoriaEntity;
 import br.com.juliocauan.aluraflix.infrastructere.repository.CategoriaRepository;
+import br.com.juliocauan.openapi.model.VideoGet;
 
 @Service
 @Transactional
@@ -17,11 +20,14 @@ public class CategoriaService extends BaseService<CategoriaEntity, Integer> {
 
     private final CategoriaRepository categoriaRepository;
     private final CategoriaMapper categoriaMapper;
+    private final VideoService videoService;
 
     @Autowired
-    public CategoriaService(CategoriaRepository categoryRepository, CategoriaMapper categoryMapper) {
+    public CategoriaService(CategoriaRepository categoryRepository, CategoriaMapper categoryMapper,
+            VideoService videoService) {
         this.categoriaRepository = categoryRepository;
         this.categoriaMapper = categoryMapper;
+        this.videoService = videoService;
     }
 
     @Override
@@ -37,6 +43,10 @@ public class CategoriaService extends BaseService<CategoriaEntity, Integer> {
     @Override
     protected String getClassName() {
         return CategoriaEntity.class.getName();
+    }
+
+    public List<VideoGet> findVideoListByCategoria(Integer categoriaId) {
+        return videoService.findAllByCategoria(this.findById(categoriaId));
     }
 
 }
