# src/main/java/br/com/juliocauan/aluraflix/infrastructere/service/VideoService.java
@@ -1,5 +1,9 @@
 package br.com.juliocauan.aluraflix.infrastructere.service;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -8,8 +12,10 @@ import br.com.juliocauan.aluraflix.domain.mapper.ServiceMapper;
 import br.com.juliocauan.aluraflix.domain.repository.BaseRepository;
 import br.com.juliocauan.aluraflix.domain.service.BaseService;
 import br.com.juliocauan.aluraflix.infrastructere.mapper.VideoMapper;
+import br.com.juliocauan.aluraflix.infrastructere.model.CategoriaEntity;
 import br.com.juliocauan.aluraflix.infrastructere.model.VideoEntity;
 import br.com.juliocauan.aluraflix.infrastructere.repository.VideoRepository;
+import br.com.juliocauan.openapi.model.VideoGet;
 
 @Service
 @Transactional
@@ -37,6 +43,15 @@ public class VideoService extends BaseService<VideoEntity, Integer> {
     @Override
     protected String getClassName() {
         return VideoEntity.class.getName();
+    }
+
+    public List<VideoGet> findAllByCategoria(CategoriaEntity categoria) {
+        List<VideoGet> videoListByCategoria = new ArrayList<>();
+        this.findAll().stream()
+                .filter(video -> video.getCategoria().equals(categoria))
+                .collect(Collectors.toList())
+                .forEach(video -> videoListByCategoria.add(videoMapper.entityToGetDto(video)));
+        return videoListByCategoria;
     }
 
 }
